feat(base): 重构表格绘制器